--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nokora:wght@100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nokora", sans-serif;
+}
+
+body {
+    background: -webkit-linear-gradient(-45deg, #6EB8E1, #C8ABE6);
 }
