--- a/frontend/components/Buttons/ActionBtn/style.module.css
+++ b/frontend/components/Buttons/ActionBtn/style.module.css
@@ -18,4 +18,5 @@
     background-color: #C8ABE6;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     transition: all 0.2s ease-in;
+    scale: 1.03;
 }
