--- a/frontend/components/Footer/styles.module.css
+++ b/frontend/components/Footer/styles.module.css
@@ -1,3 +1,11 @@
 .footer {
+    width: 100%;
     padding: 1rem;
+    background-color: black;
+    text-align: center;
+}
+
+.footer>a {
+    color: aliceblue;
+    text-decoration: none;
 }
