--- a/frontend/src/pages/login/style.module.css
+++ b/frontend/src/pages/login/style.module.css
@@ -1,5 +1,6 @@
 .body {
-    min-height: 100vh;
+    width: 100%;
+    background: -webkit-linear-gradient(-45deg, #FFA3A580, #F686BD30, #BDE0FE50);
     display: flex;
     padding: 1rem;
     flex-direction: row;
@@ -9,8 +10,8 @@
 
 .container {
     padding: 0 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.466);
-    background: -webkit-linear-gradient(-45deg, #FFA3A550, #F686BD30, #BDE0FE80);
+    background-color: rgba(240, 248, 255, 0.366);
+    border: 1.5px solid rgba(0, 0, 0, 0.466);
     border-radius: 1.8rem;
     display: flex;
     flex-direction: row;
@@ -34,8 +35,7 @@
     margin: 0.5rem 2rem;
     height: 2.5rem;
     border-radius: 0.5rem;
-    border: none;
-    user-select: none;
+    border: 1px solid rgba(0, 0, 0, 0.466);
     padding: 0.5rem;
     transition: transform 0.2s ease;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
