--- a/frontend/src/pages/signup/style.module.css
+++ b/frontend/src/pages/signup/style.module.css
@@ -1,5 +1,6 @@
 .body {
-    min-height: 100vh;
+    width: 100%;
+    background: -webkit-linear-gradient(-45deg, #F197FF50, #3ED4D950, #5BFF9050);
     display: flex;
     padding: 1rem;
     flex-direction: row;
@@ -8,10 +9,9 @@
 }
 
 .container {
-    margin-top: 4.6rem;
     padding: 0.5rem 3rem;
-    border: 1px solid rgba(0, 0, 0, 0.466);
-    background: -webkit-linear-gradient(-45deg, #F197FF50, #3ED4D950, #5BFF9050);
+    border: 1.5px solid rgba(0, 0, 0, 0.466);
+    background-color: rgba(250, 235, 215, 0.301);
     border-radius: 1.8rem;
     display: flex;
     flex-direction: row;
@@ -31,7 +31,8 @@
     justify-content: center;
 }
 
-.containerRight>p, .containerRight>label {
+.containerRight>p,
+.containerRight>label {
     align-self: center;
 }
 
@@ -42,7 +43,7 @@
     margin: 0.2rem 2rem;
     height: 2.5rem;
     border-radius: 0.5rem;
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.466);
     user-select: none;
     padding: 0.5rem;
     transition: transform 0.2s ease;
