--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
 
 .body {
+    flex: 1;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    min-height: 100vh;
+    background: -webkit-linear-gradient(-45deg, #6EB8E1, #C8ABE6);
     justify-content: center;
 }
 
