--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
+@font-face {
+    font-family: "Delius";
+    src: url("../../public/fonts/Delius.ttf");
+}
 
 .body {
     flex: 1;
