--- a/frontend/components/TextDanger/style.module.css
+++ b/frontend/components/TextDanger/style.module.css
@@ -4,4 +4,6 @@
     background-color: rgba(255, 0, 0, 0.065);
     padding: 0.5rem;
     border-radius: 0.5rem;
+    width: max-content;
+    align-self: center;
 }
