--- a/frontend/src/layouts/FeedLayout/style.module.css
+++ b/frontend/src/layouts/FeedLayout/style.module.css
@@ -1,20 +1,22 @@
-.container {
+.feedMainContainer {
     padding: 1rem;
     background: -webkit-linear-gradient(45deg, #31B4BA80, #6F97EB80, #B577EC80);
     width: 100%;
     flex: 1;
     display: flex;
     flex-direction: row;
-    justify-content: center;
 }
 
-.container>div:nth-child(odd) {
+.feedMainContainer>div:nth-child(odd) {
     flex: 0.3;
 }
 
-.container>div:nth-child(even) {
+.feedMainContainer>div:nth-child(even) {
     flex: 0.7;
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+.createPost {
+    align-self: center;
 }
