--- a/frontend/components/Buttons/InteractBtn/style.module.css
+++ b/frontend/components/Buttons/InteractBtn/style.module.css
@@ -1,9 +1,9 @@
 .btn {
-    padding: 0.5rem 1rem 0.3rem 1rem;
+    padding: 0.5rem 1rem 0.1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.4rem;
+    gap: 0.5rem;
     font-size: 0.8rem;
     cursor: pointer;
     outline: none;
@@ -19,4 +19,9 @@
     transition: all 0.2s ease;
     background-color: rgba(245, 245, 220, 0.082);
     scale: 1.03;
+}
+
+.button>p {
+    margin: 0;
+    padding: 0;
 }
