--- a/frontend/src/pages/post/style.module.css
+++ b/frontend/src/pages/post/style.module.css
@@ -11,9 +11,11 @@
 .userImg {
     align-self: center;
     height: 50px;
+    width: auto;
+    max-width: 50px;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.322);
-    padding: 0.4rem;
+    padding: 0.2rem;
 }
 
 .textAreaDiv {
