feat: implement user posts retrieval and associated routes
feat: enhance user signup validation, add username format check

refactor: update post routes to include user-specific posts

chore: remove unused image file from uploads

feat: improve TextDanger and TextSuccess components with close functionality

style: update styles for TextDanger and TextSuccess components

feat: create actions and reducers for deleting and fetching user posts

feat: implement user posts page with delete functionality

feat: create Post component for rendering individual posts

style: add styles for Post component and my_posts page

--- a/frontend/components/TextDanger/style.module.css
+++ b/frontend/components/TextDanger/style.module.css
@@ -1,9 +1,27 @@
-.text {
-    color: red;
-    border: 1px solid rgba(255, 0, 0, 0.599);
-    background-color: rgba(255, 0, 0, 0.065);
-    padding: 0.5rem;
+.textWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
+    gap: 0.5rem;
+    position: absolute;
+    top: 5rem;
+    border: 1px solid red;
     border-radius: 0.5rem;
+    background-color: coral;
+    padding: 0.5rem;
+}
+
+.text {
+    color: black;
     width: max-content;
     align-self: center;
+}
+
+.closeButton {
+    background: none;
+    border: none;
+    display: flex;
+    place-items: center;
+    cursor: pointer;
 }
