--- a/frontend/components/TextSuccess/style.module.css
+++ b/frontend/components/TextSuccess/style.module.css
@@ -1,9 +1,27 @@
-.text {
-    color: green;
+.textWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
+    gap: 0.5rem;
+    position: absolute;
+    top: 5rem;
     border: 1px solid green;
-    background-color: rgba(172, 255, 47, 0.068);
-    padding: 0.5rem;
     border-radius: 0.5rem;
+    background-color: darkseagreen;
+    padding: 0.5rem;
+}
+
+.text {
+    color: black;
     width: max-content;
     align-self: center;
+}
+
+.closeButton {
+    background: none;
+    border: none;
+    display: flex;
+    place-items: center;
+    cursor: pointer;
 }
