--- a/frontend/src/pages/my_posts/style.module.css
+++ b/frontend/src/pages/my_posts/style.module.css
@@ -13,11 +13,19 @@
 }
 
 .userPostActions {
-    background-color: rgba(240, 248, 255, 0.452);
+    width: 85%;
+    padding-block: 0.3rem;
+    padding-right: 1rem;
+    justify-self: center;
+    background-color: rgba(128, 128, 128, 0.527);
     border: 1.2px solid rgba(0, 0, 0, 0.466);
-    border-radius: 0 0 10px 10px;
-    padding: 0.3rem;
+    border-radius: 10px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    gap: 0.6rem;
+}
+
+.userPostActions>button {
+    font-size: 0.9rem;
 }
