feat: comment on the post, see comments of the post; code refactor
- get comments and add comments for the post
- code refactor
- added svgr module so that svg can be imported
- improved button by directly adding svg instead of adding inside img tag

--- a/frontend/components/Navbar/styles.module.css
+++ b/frontend/components/Navbar/styles.module.css
@@ -25,7 +25,7 @@
     cursor: pointer;
 }
 
-.routeHome>p {
+.routeHome>span {
     font-family: "Delius", cursive;
     color: #F7F6F7;
     font-weight: 500;
@@ -101,13 +101,31 @@
 }
 
 @media (max-width: 600px) {
-    .navbarMiddle>button>p {
+    .navbarMiddle>button>span {
         display: none;
     }
 }
 
 @media (max-width: 480px) {
     .userImg {
+        display: none;
+    }
+
+    .logoutBtn>button {
+        white-space: nowrap;
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .logoutBtn>button {
+        white-space: wrap;
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .navbarMiddle>button:nth-child(2) {
         display: none;
     }
 }
