--- a/frontend/components/AutoResizeTextArea/style.module.css
+++ b/frontend/components/AutoResizeTextArea/style.module.css
@@ -1,20 +1,18 @@
 .textarea {
     width: 100%;
-    min-height: 100px;
     padding: 0.5rem;
-    background-color: rgba(250, 235, 215, 0.497);
+    background-color: rgba(250, 235, 215);
     resize: none;
     overflow: hidden;
     border: 1px solid rgba(0, 0, 0, 0.466);
-    border-radius: 0.5rem;
+    border-radius: 0.8rem;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    transition: transform 0.7s ease;
     transition: box-shadow 0.2s ease;
     outline: none;
 }
 
 .textarea::placeholder {
-    font-size: 1.1rem;
+    font-size: 1rem;
     text-align: center;
 }
 
