--- a/frontend/src/pages/my_posts/style.module.css
+++ b/frontend/src/pages/my_posts/style.module.css
@@ -24,8 +24,20 @@
     flex-direction: row;
     justify-content: flex-end;
     gap: 0.6rem;
+    transition: all 0.2s ease;
+}
+
+.userPostActions:hover {
+    background-color: rgba(128, 128, 128, 0.658);
+    transition: all 0.2s ease;
 }
 
 .userPostActions>button {
     font-size: 0.9rem;
+}
+
+@media (max-width: 600px) {
+    .userPostActions {
+        width: 100%;
+    }
 }
