--- a/frontend/components/Comment/style.module.css
+++ b/frontend/components/Comment/style.module.css
@@ -3,7 +3,7 @@
     max-height: 90%;
     overflow: auto;
     overflow-y: auto;
-    scrollbar-width: thin; 
+    scrollbar-width: thin;
 }
 
 .postComments>h2 {
@@ -84,14 +84,13 @@
 }
 
 .commentActions>span {
-    color: slategray;
+    color: dimgrey;
+    padding-inline-end: 0.3rem;
 }
 
 .commentActions>div>button {
-    color: slategray;
+    color: dimgrey;
     font-size: 0.6rem;
-    padding-top: 0.4rem;
-    padding-inline: 0.4rem;
 }
 
 .commentActions>div>button>svg {
@@ -99,7 +98,7 @@
 }
 
 .commentActions>div>button>svg>path {
-    fill: slategray;
+    fill: dimgrey;
 }
 
 .replies {
