--- a/frontend/components/AutoResizeTextArea/style.module.css
+++ b/frontend/components/AutoResizeTextArea/style.module.css
@@ -12,13 +12,23 @@
 }
 
 .textarea::placeholder {
-    font-size: 1rem;
+    font-size: 1.1em;
     text-align: center;
 }
 
 .textarea:focus {
-    transform: scale(1.02);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     transition: box-shadow 0.2s ease;
-    transition: transform 0.2s ease;
+}
+
+@media (max-width: 1024px) {
+    .textarea::placeholder {
+        font-size: 1.1em;
+    }
+}
+
+@media (max-width: 768px) {
+    .textarea::placeholder {
+        font-size: 0.8em;
+    }
 }
