--- a/frontend/components/Buttons/ActionBtn/style.module.css
+++ b/frontend/components/Buttons/ActionBtn/style.module.css
@@ -1,7 +1,8 @@
 .button {
-    font-size: 1rem;
+    text-align: center;
+    width: 100%;
+    font-size: 1em;
     font-weight: 400;
-    margin: 0.3rem;
     padding: 0.6rem 0.7rem;
     color: aliceblue;
     background-color: rgba(0, 0, 0, 0.801);
@@ -19,4 +20,16 @@
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     transition: all 0.2s ease-in;
     scale: 1.03;
+}
+
+@media (max-width: 1024px) {
+    .button {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 768px) {
+    .button {
+        font-size: 0.8em;
+    }
 }
