--- a/frontend/components/Comment/style.module.css
+++ b/frontend/components/Comment/style.module.css
@@ -17,12 +17,12 @@
     bottom: 0;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: center;
     gap: 0.1rem;
 }
 
 .addCommentContainer>textarea {
-    flex: 1;
+    flex: 0.99;
     height: 3rem;
 }
 
@@ -45,15 +45,6 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-}
-
-.profilePic {
-    width: auto;
-    height: 30px;
-    max-width: 30px;
-    object-fit: contain;
-    overflow: hidden;
-    border-radius: 50%;
 }
 
 .name {
