--- a/frontend/components/Navbar/styles.module.css
+++ b/frontend/components/Navbar/styles.module.css
@@ -9,6 +9,10 @@
     width: 100%;
 }
 
+.noUser {
+    padding-block: 0.3rem;
+}
+
 .noUser,
 .validUser {
     display: flex;
@@ -38,14 +42,19 @@
     gap: 0.2rem;
 }
 
+.navbarMiddle>a>button {
+    height: 100%;
+    justify-content: space-around;
+}
+
 .navbarRight {
     display: flex;
     align-items: center;
     gap: 0.6rem;
 }
 
-.navbarRight>button {
-    font-size: 1rem;
+.navbarRight {
+    font-size: 0.9rem;
 }
 
 .userImgDiv {
@@ -76,20 +85,8 @@
     border-width: 3px;
 }
 
-.userImg {
-    padding: 0.2rem;
-    align-self: center;
-    justify-self: center;
-    height: 40px;
-    overflow: hidden;
-    width: auto;
-    max-width: 40px;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.473);
-}
-
 @media (max-width: 830px) {
-    .navbarMiddle>button:nth-child(5) {
+    .navbarMiddle>a:nth-child(5) {
         display: none;
     }
 }
@@ -101,31 +98,29 @@
 }
 
 @media (max-width: 600px) {
-    .navbarMiddle>button>span {
+    .navbarMiddle>a>button>span {
         display: none;
     }
 }
 
 @media (max-width: 480px) {
-    .userImg {
+    .userImgDiv {
         display: none;
     }
 
-    .logoutBtn>button {
+    .logoutBtn>a>button {
         white-space: nowrap;
         font-size: 0.8rem;
     }
-}
 
-@media (max-width: 480px) {
-    .logoutBtn>button {
+    .logoutBtn>a>button {
         white-space: wrap;
         font-size: 0.8rem;
     }
 }
 
-@media (max-width: 480px) {
-    .navbarMiddle>button:nth-child(2) {
+@media (max-width: 380px) {
+    .navbarMiddle>a:nth-child(2) {
         display: none;
     }
 }
