--- a/frontend/components/Post/style.module.css
+++ b/frontend/components/Post/style.module.css
@@ -3,7 +3,9 @@
     justify-self: center;
     padding: 0.5rem;
     background-color: rgba(240, 248, 255, 0.452);
-    border: 1.2px solid rgba(0, 0, 0, 0.466);
+    border-top: 1.2px solid rgba(0, 0, 0, 0.466);
+    border-left: 1.2px solid rgba(0, 0, 0, 0.466);
+    border-right: 1.2px solid rgba(0, 0, 0, 0.466);
     border-radius: 10px 10px 0 0;
 }
 
@@ -17,15 +19,6 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
-}
-
-.userImg {
-    width: auto;
-    height: 30px;
-    max-width: 30px;
-    object-fit: contain;
-    overflow: hidden;
-    border-radius: 50%;
 }
 
 .userInfo {
