--- a/frontend/src/layouts/FeedLayout/style.module.css
+++ b/frontend/src/layouts/FeedLayout/style.module.css
@@ -1,6 +1,5 @@
 .feedMainContainer {
     padding: 1rem;
-    background: -webkit-linear-gradient(45deg, #31B4BA80, #6F97EB80, #B577EC80);
     width: 100%;
     flex: 1;
     display: flex;
@@ -10,9 +9,6 @@
 .feedMainContainer>div:nth-child(odd) {
     flex: 0.3;
     align-items: center;
-}
-
-.userContainer {
     display: flex;
     flex-direction: column;
 }
@@ -25,6 +21,7 @@
     border: 1px solid rgba(0, 0, 0, 0.466);
     border-radius: 0.6rem;
     transition: all 0.2s ease;
+    gap: 0.7rem;
 }
 
 .userActivity:hover {
@@ -41,9 +38,6 @@
     flex: 0.7;
     display: flex;
     flex-direction: column;
-}
-
-.feedContainer {
     align-items: center;
 }
 
@@ -54,8 +48,9 @@
 }
 
 @media (max-width: 750px) {
-    .userContainer {
+    .feedMainContainer>div:nth-child(odd) {
         display: none;
+        flex: 0;
     }
 
     .feedMainContainer>div:nth-child(even) {
