--- a/frontend/src/pages/post/style.module.css
+++ b/frontend/src/pages/post/style.module.css
@@ -1,35 +1,81 @@
 .createPostContainer {
-    background: linear-gradient(45deg, #FFCE0050, #A6E08850);
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.uploadImg {
+    margin-top: 1rem;
+    height: 350px;
+    width: 350px;
+    background: rgba(245, 245, 245, 0.363);
+    border-radius: 0.5rem;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    border: 1px solid #0007;
+    display: flex;
     justify-content: center;
-    align-content: center;
-    gap: 3rem;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5rem;
+    transition: all 0.2s ease;
+    cursor: pointer;
 }
 
-.userImg {
-    align-self: center;
-    height: 50px;
-    width: auto;
-    max-width: 50px;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.322);
-    padding: 0.2rem;
+.uploadImg:hover {
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    background: rgba(245, 245, 245, 0.662);
+    transition: all 0.2s ease;
 }
 
-.textAreaDiv {
-    justify-self: center;
+.uploadImg>img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.postBody {
     width: 80%;
 }
 
-.textAreaDiv>textarea {
+.postBody>textarea {
     min-height: 6rem;
 }
 
 .actionBtn {
+    padding-bottom: 1rem;
+    width: 80%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    align-self: center;
+    gap: 0.5rem;
+}
+
+.actionBtn>label {
+    width: fit-content;
+}
+
+@media (max-width: 450px) {
+    .uploadImg {
+        height: 300px;
+        width: 300px;
+    }
+
+    .uploadImg>svg {
+        height: 150px;
+        width: 150px;
+    }
+}
+
+@media (max-width: 350px) {
+    .uploadImg {
+        height: 250px;
+        width: 250px;
+    }
+
+    .uploadImg>svg {
+        height: 100px;
+        width: 100px;
+    }
 }
