--- a/frontend/components/AutoResizeTextArea/style.module.css
+++ b/frontend/components/AutoResizeTextArea/style.module.css
@@ -12,7 +12,7 @@
 }
 
 .textarea::placeholder {
-    font-size: 1.1em;
+    font-size: 1.1rem;
     text-align: center;
 }
 
@@ -23,12 +23,12 @@
 
 @media (max-width: 1024px) {
     .textarea::placeholder {
-        font-size: 1.1em;
+        font-size: 1.1rem;
     }
 }
 
 @media (max-width: 768px) {
     .textarea::placeholder {
-        font-size: 0.8em;
+        font-size: 0.8rem;
     }
 }
