--- a/frontend/components/Buttons/ActionBtn/style.module.css
+++ b/frontend/components/Buttons/ActionBtn/style.module.css
@@ -1,9 +1,9 @@
 .button {
     text-align: center;
     width: 100%;
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 400;
-    padding: 0.6rem 0.7rem;
+    padding: 0.5rem;
     color: aliceblue;
     background-color: rgba(0, 0, 0, 0.801);
     border: none;
@@ -24,12 +24,12 @@
 
 @media (max-width: 1024px) {
     .button {
-        font-size: 1em;
+        font-size: 1rem;
     }
 }
 
 @media (max-width: 768px) {
     .button {
-        font-size: 0.8em;
+        font-size: 0.8rem;
     }
 }
