--- a/frontend/components/TextSuccess/style.module.css
+++ b/frontend/components/TextSuccess/style.module.css
@@ -3,13 +3,14 @@
     flex-direction: row;
     justify-content: center;
     align-self: center;
-    gap: 0.5rem;
+    gap: 0.3rem;
     position: fixed;
     top: 3rem;
     left: 50%;
     border: 1px solid green;
     border-radius: 0.5rem;
     background-color: darkseagreen;
+    font-size: 1rem;
     padding: 0.5rem;
     transition: all 0.2s ease;
     z-index: 1000;
