feat: add updateProfilePicture action and edit SVG icon
- Implemented the updateProfilePicture action using createAsyncThunk for updating user profile pictures.
- Added a new SVG icon for edit functionality.

--- a/frontend/components/Navbar/styles.module.css
+++ b/frontend/components/Navbar/styles.module.css
@@ -9,6 +9,7 @@
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 1000;
 }
 
 .noUser {
@@ -60,6 +61,7 @@
 }
 
 .userImgDiv {
+    padding: 0.1rem;
     position: relative;
     display: flex;
     place-items: center;
