--- a/frontend/components/UserCard/style.module.css
+++ b/frontend/components/UserCard/style.module.css
@@ -22,9 +22,8 @@
 .userImageContainer {
     height: 50px;
     width: 50px;
-    padding: 0.2rem;
+    padding: 0.1rem;
     border-radius: 50%;
-    background-color: black;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -34,6 +33,7 @@
 .userImageContainer>img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     object-fit: fill;
 }
 
