--- a/frontend/components/UserImage/style.module.css
+++ b/frontend/components/UserImage/style.module.css
@@ -4,7 +4,6 @@
     padding: 0.1rem;
     border-radius: 50%;
     overflow: hidden;
-    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,5 +12,6 @@
 .userImageContainer>img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     object-fit: fill;
 }
